2003-06-24  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* configure.ac, src/Makefile.am: do not use libtool.
	
2003-06-23  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* version 0.18
	
2003-06-22  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c: Bind environment variables to Scheme variables.
	* doc/*.escm: Update documents.

2003-06-21  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/meta_arg.c: Removed code for debugging which I forgot
	  to erase.
	* src/lang.c, src/escm.c, src/escm.h: Add true field to struct
	  escm_lang.
	* src/handler.c: Removed. Merged to src/filter.c.
	
2003-06-20  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	* src/filter.c, src/handler.c: ad hoc mechanism to acquire POSTed
	  query strings (bound to *escm-cgi-post*)

2003-06-19  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/handler.c: bugfix.
	
2003-06-17  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* *** version 0.17
	* src/lang.c: make a bit secure.
	* doc/gimmick.escm, doc/readme.escm: update.
	
2003-06-13  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	
	* src/escm.c, src/escm.h: changed the interface of escm_error().
	* src/meta_arg.c: rewrite the parser of meta-arguments.
	* src/lang.c: rewrite the parser of configuration files.
	* src/escm_scm.c, src/escm_scm.h: absorbed in src/escm.[ch].
	* test/t130_preset.test, test/t140_prst_awk.test,
	  test/t150_comment.test: add more tests.

2003-06-10  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* Remove src/escm/* which have been moved to src/.
	* configure.ac, src/Makefile.am, and others: libtoolized.
	* src/filter.c, src/lang.c: fix bugs on getting the interpreter
	  name from config files.
	* test/t110_string.test, test/t120_awk.test: add more tests.
	
2003-06-09  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* *** version 0.16
	* Too many changes while my notebook was disconnected from the Net.
	
2002-12-25  Shiro Kawai  <shiro@acm.org>

	* all files: checked in to the SourceForge repository.

2002-12-26  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* *** version 0.15
