@@ -43,5 +43,5 @@ BUGS
 
      ----------------------------------------------------------------------
 
-   This file was converted from readme.escm on Mon Jun 23 23:20:09 2003. The
-   backend is /usr/bin/gosh -b.
+   This file was converted from readme.escm on Fri Jun 27 01:24:39 2003. The
+   backend is /home/tagga/bin/gosh -b.
