@@ -23,13 +23,16 @@ AC_ESCM_CHECK_SCM([gosh guile rep])
 # Checks for libraries.
 # Checks for header files.
 AC_HEADER_STDC
+AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
+AC_TYPE_PID_T
 # Checks for library functions.
+AC_FUNC_FORK
 AC_FUNC_VPRINTF
-AC_CHECK_FUNCS([strchr strerror strstr dup2])
+AC_CHECK_FUNCS([dup2 strerror strstr strtol])
 
 # gimmick
 AC_OBJEXT
